--- a/package.json
+++ b/package.json
@@ -5,18 +5,14 @@
     "dev": "cross-env NODE_ENV='dev' node build.mjs",
     "build": "cross-env NODE_ENV='production' node build.mjs",
     "lint": "eslint --ext .js,.mjs,.jsx,.tsx,.ts 'src/**/*'",
-    "lint:fix": "eslint --ext .js,.mjs,.jsx,.tsx,.ts src/ --fix",
-    "prepare": "husky install"
+    "lint:fix": "eslint --ext .js,.mjs,.jsx,.tsx,.ts src/ --fix"
   },
   "dependencies": {
     "@primer/octicons-react": "^18.3.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@types/react-redux": "^7.1.33",
-    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "dompurify": "^3.0.3",
-    "html-to-md": "^0.8.3",
-    "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -54,7 +50,6 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fs-extra": "^11.1.1",
-    "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
     "postcss-scss": "^4.0.6",
