--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-toastify": "^4.1.0",
     "@types/socket.io-client": "^3.0.0",
     "@types/webextension-polyfill": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
