--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "sourceMap": true,
     "module": "esnext",
     "target": "es2018",
     "allowJs": true,
