--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "canvas-browser-sync",
+  "name": "canvas-ui-browser",
+  "description": "A browser extension for Canvas",
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV='dev' node build.mjs",
@@ -59,5 +60,6 @@
   },
   "resolutions": {
     "@types/react": "18.0.26"
-  }
+  },
+  "license": "AGPL-3.0-or-later"
 }
