--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
   "resolutions": {
     "@types/react": "18.0.26"
   },
+  "engines": {
+    "node": ">=20.0.0 <21.0.0"
+  },
   "license": "AGPL-3.0-or-later"
 }
