--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^9.1.0",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.1",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "webextension-polyfill": "^0.12.0"
   },
   "lint-staged": {
     "src/*.{js,jsx,ts,tsx,mjs}": [
