--- a/manifest-chromium.json
+++ b/manifest-chromium.json
@@ -1,18 +1,17 @@
 {
   "manifest_version": 3,
   "name": "Canvas Browser Extension",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Seamlessly sync browser tabs with Canvas server contexts",
 
   "permissions": [
     "tabs",
-    "storage",
-    "activeTab"
+    "storage"
   ],
 
   "host_permissions": [
-    "http://localhost/*",
-    "http://127.0.0.1/*",
+    "*://localhost/*",
+    "*://127.0.0.1/*",
     "https://*/*"
   ],
 
@@ -25,9 +24,6 @@
     "default_popup": "popup/popup.html",
     "default_title": "Canvas Browser Extension",
     "default_icon": {
-      "16": "assets/icons/logo-br_64x64.png",
-      "32": "assets/icons/logo-br_64x64.png",
-      "48": "assets/icons/logo-br_64x64.png",
       "64": "assets/icons/logo-br_64x64.png",
       "128": "assets/icons/logo-br_128x128.png"
     }
