--- a/manifest-chromium.json
+++ b/manifest-chromium.json
@@ -12,7 +12,10 @@
   "host_permissions": [
     "*://localhost/*",
     "*://127.0.0.1/*",
-    "https://*/*"
+    "http://*/*",
+    "https://*/*",
+    "https://my.cnvs.ai/*",
+    "https://canvas.idnc.sk/*"
   ],
 
   "background": {
@@ -38,7 +41,7 @@
   },
 
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:* http://127.0.0.1:* https://* ws://localhost:* ws://127.0.0.1:* wss://*; style-src 'self' 'unsafe-inline';"
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http: https: ws: wss:; style-src 'self' 'unsafe-inline';"
   },
 
   "web_accessible_resources": [
